<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPageActivity">


    <Button
        android:id="@+id/button2"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="135dp"
        android:backgroundTint="#000000"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />


    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="120dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/sign_up_btn"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/wcback_btn"
        android:layout_width="155dp"
        android:layout_height="140dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcomeback" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/textInputLayout7"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/email_or_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/textInputLayout8"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:textColorHint="@color/black"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>